test/typecheck/pass/exist_synonym/v1.expect
Type error at file "exist_synonym/v1.sail", line 6, character 42 to line 6, character 42

let x : {'n, 0 <= 'n <= 33. regno('n)} = [41m4[0m

Tried performing type coercion from int(4) to {'n, (0 <= 'n & 'n <= 33). regno('n)} on 4
Coercion failed because: Could not prove constraints (0 <= 'n & ('n + 1) <= 32) in type synonym int('n) with (0 <= 'n & 'n <= 33)
